--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/hc_apartmentdb?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Tommijgqb#19
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 
