--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 		<java.version>14</java.version>
 		<jaxb.version>2.3.0</jaxb.version>
 		<mysql.version>8.0.16</mysql.version>
-		<mapstruct.version>1.3.0.Final</mapstruct.version>
+		<lombok.version>1.18.18</lombok.version>
+		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<maven.complier.source>$(java.version)</maven.complier.source>
 		<maven.complier.target>$(java.version)</maven.complier.target>
 	</properties>
@@ -111,13 +112,26 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<excludes>
-						<exclude>
+					<annotationProcessorPaths>
+						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapstruct.version}</version>
+						</path>
+					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
