--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://192.168.0.8:3306/hc_apartmentdb?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=tommijgqb#19
+spring.datasource.password=Tommijgqb#19
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
 
